Removed fixed-bottom nav buttons, replaces with standard button. Removed table-striping, reduced width of bank security form, on sharing, placed Shared Accounts above Accounts Available to Share, adjusted spacing on loading page as specified

--- a/ac.less
+++ b/ac.less
@@ -775,7 +775,7 @@ h4.bank-name {
 .white-header {
 	padding:7px 0 6px 0;
 	img {
-		margin-left: 35px;
+		margin-left: 100px;
         padding-bottom: 15px;
         padding-top: 20px;
         @media all and (min-width: @screen-md) {
@@ -961,7 +961,7 @@ progress {
 position:relative;
 width:128px;
 height:128px;
-margin:17% auto 17px auto;
+margin:10% auto 4% auto;
 }
 
 #bowl_ringG{
@@ -1373,18 +1373,18 @@ label.switch-light.switch-candy {
 }
 
 .form-control[disabled] {
-	background-color: #f5f4f4;
+	background-color: #fafafa;
 }
 	
 .form-signin {
 	.form-control {
 		padding-left: 30px;   
-        border-color: #eee;
+        border-color: #efefef;
         margin-left: 0px;
         margin-bottom:10px;
         width: 100%;
     	font-size:18px;
-        color: @type; 
+        color: #ccc; 
 	}
 }
 
